*Empty MediaWiki Message*

--- a/Lewis_Hamilton.mw
+++ b/Lewis_Hamilton.mw
@@ -77,11 +77,11 @@ In den italiaansken Grand Prix endigeden Hamilton seavendes en den vöärsprong 
 By den brasiliaansken Grand Prix mos Hamilton minstens as vyvden endigen as Massa de race wön üm et werldkampioonskap veilig too stellen. Net vöär de race begön der ne reagenbuie en Hamilton was as veerden eplåtst vöärdat hy terügvelen når de sesde plåtse nådat hy nen pitsop had emåked vöär dröyge banden. Wisselvallige neaderslag beteakenden dat alle koureurs meyrdere målen wisselden tüsken reagenbanden en banden vöär droug weader en med dree runden too gån lag Hamilton vyvdes en mos hy enkel syne positsy vasteholden üm den titel too verseakeren. In de vöärlåtste runde passereden Vettel Hamilton en den begön de låtste runde as sesden en lek de vyvde plåtse neet meyr too können terügnemmen. Skonwal måkeden hy en Vettel in de låtste runde nen gat van 18 sekunden good döär Timo Glock, den et möylik had up banden vöär ne dröyge wegge, by de låtste bochte in too hålen sodat hy de vyvde plåtse terügnam en blev de racewinnaar Massa vöär den titel med eyn pünt vöär. Dit beteakenden dat Hamilton et werldkampioonskap van de Formule Eyn van 2008 had epakt en wyr den jüngsten koureur den den titel wön, den eyrsten swarten koureur en den eyrsten britsken koureur den et werldkampioonskap wön sinds Damon Hill in 1996.
 
 ===== Racistisk misbruuk =====
-In February, Hamilton was verbally heckled and otherwise abused during pre-season testing at the Circuit de Catalunya in Catalonia by several Spanish spectators who wore black face paint and black wigs, as well as shirts bearing the words "Hamilton's familly{{sic|famil|ly}}".<ref name="times20080204">{{cite news|url=http://www.timesonline.co.uk/tol/sport/formula_1/article3305228.ece|title=Lewis Hamilton 'saddened' by racist abuse|date=4 February 2008|accessdate=27 July 2009|work=The Times|location=London|first=Sadie|last=Gray}}</ref> Hamilton became widely unpopular in Spain because of his rivalry with Spanish former teammate Fernando Alonso. The FIA warned Spanish authorities about the repetition of such behaviour.<ref>{{cite news|url=http://news.bbc.co.uk/sport1/hi/motorsport/formula_one/7225523.stm|title=Hamilton saddened by racist abuse|publisher=BBC Sport|accessdate=4 February 2008|date=4 February 2008}}</ref> and launched a "Race Against Racism" campaign.<ref>{{cite web|url=http://www.formula1.com/news/headlines/2008/2/7355.html|title=FIA to launch anti-racism initiative|publisher=Formula1.com|accessdate=4 November 2008|deadurl=yes|archiveurl=https://web.archive.org/web/20080708212218/http://www.formula1.com/news/headlines/2008/2/7355.html|archivedate=8 July 2008|df=dmy}}</ref>
+In february wyr Hamilton verbål anevallen en up andere wys misbruukt tydens de testraces vöär et seisoon up et Circuit de Catalunya in Katalonie döär verskillende spaanske tooskowers dy swarte gesichtsvarv en swart prüüke hadden en ok shirts med de wöärde "De family van Hamilton". Hamilton wyr wyd en syd unpopulair in Spanje vanweagen syne rivaliteyt med synen spaansken vöärmåligen teammåt Fernando Alonso. De FIA wårskuweden spaanske autoriteyten vöär herhoaling van sülk gedrag en lancereden ne "Race teagen racisme" kampagne.
 
-Shortly before the 2008 Brazilian Grand Prix, a website owned by the Spanish branch of the New York–based advertising agency TBWA and named "pinchalaruedadeHamilton" ("burst Hamilton's tyre") was featured in the British media. The website contained an animated image of Interlagos that allowed users to leave nails and porcupines on the track for Hamilton's car to run over. Among thousands of comments left since 2007, some included racial insults.<ref>{{cite news|url=https://www.theguardian.com/media/2008/nov/01/hamilton-racism-formula-one-spain|title=Website used to abuse Lewis Hamilton owned by global ad agency|work=The Guardian|location=London|first=Giles|last=Tremlett|date=1 November 2008|accessdate=7 May 2010}}</ref> His rival Fernando Alonso condemned the racist supporters.<ref>{{cite news|url=http://www.barcelonareporter.com/index.php?/news/comments/spains_f1_alonso_condemns_racism_aimed_at_hamilton/|title=The Barcelona Reporter|publisher=barcelonareporter.com|accessdate=11 July 2010|deadurl=yes|archiveurl=https://web.archive.org/web/20110718055655/http://www.barcelonareporter.com/index.php?%2Fnews%2Fcomments%2Fspains_f1_alonso_condemns_racism_aimed_at_hamilton%2F|archivedate=18 July 2011|df=dmy}}</ref>
+Kört vöar den brasiliaansken Grand Prix van 2008 wyr ne websteade van den spaansken tak van advertentsybedryv TBWA uut New York enåmed "pinchalaruedadeHamilton" ("stekt Hamiltons banden lek") enöömd in de britske media. De websteade bevatteden ne eanimeerde avbeeldinge van Interlagos dat gebruukers de möägelikheyd gav üm spykers en stekkels up de båne too leggen wår de wågen van Hamilton oaverhen sol ryden. Under de duusende upmarkingen achterelåten sinds 2007 waren nen antal racistiske beledigingen. Synen rivål Fernando Alonso veroardeleden de racistiske supporters.
 
-==== 2009 season: A frustrating year ====
+==== Et seisoon van 2009: Nen frustrerend jår ====
 [[Bestaand:Hamilton_2009_Malaysian_GP_1.jpg|rechts|duum|Hamilton driving for McLaren at the 2009 Malaysian Grand Prix]]
 Hamilton started the 2009 season-opening Australian Grand Prix from 18th place on the grid after the McLaren team incurred a penalty for changing his gearbox during qualifying.<ref>{{cite news|url=https://www.telegraph.co.uk/sport/motorsport/formulaone/5065001/Lewis-Hamilton-trailing-as-Jenson-Button-takes-pole-for-F1-Australian-Grand-Prix.html|title=Lewis Hamilton trailing as Jenson Button takes pole for F1 Australian Grand Prix|first=Tom|last=Cary|work=The Daily Telegraph|date=28 March 2009|accessdate=17 August 2010|location=London}}</ref> Hamilton benefited from a late crash between Red Bull's Sebastian Vettel and BMW Sauber's Robert Kubica to move into fourth place by the end of the race. He was then promoted to third after Jarno Trulli was penalised for overtaking him under safety-car conditions. During a post-race stewards' hearing, Hamilton and McLaren officials told stewards they had not purposely let Trulli pass, which was contradicted by the release of the McLaren race radio communication.<ref>
 {{cite web|url=http://makformula1.blogspot.com/2009/04/transcript-of-mclaren-radio.html|title=FORMULA 1: Transcript of McLaren radio transmission + AUDIO|publisher=makformula1.blogspot.com|accessdate=3 April 2009}}</ref> Hamilton was then disqualified from the race for providing "misleading evidence" during the stewards' hearing.<ref>{{cite news|last=Noble|first=Jonathan|url=http://www.autosport.com/news/report.php/id/74146|title=Hamilton disqualified from Australian GP|work=Autosport|date=2 April 2009|accessdate=2 April 2009}}</ref> He later privately apologised to FIA race director Charlie Whiting for having lied to the stewards.<ref>{{Cite news|url=http://www.autosport.com/news/report.php/id/74394|title=Hamilton apologised to FIA's Whiting|work=Autosport|date=10 April 2009|author1=Cooper, Adam|author2=Noble, Jonathan|accessdate=11 April 2009}}</ref> He went on to describe the incident as the hardest week of his life, and considered quitting Formula One.<ref>{{cite news|title=Lewis Hamilton considered quitting Formula One over 'lying' scandal|url=https://www.telegraph.co.uk/sport/motorsport/formulaone/lewishamilton/5110917/Lewis-Hamilton-considered-quitting-Formula-One-over-lying-scandal.html|accessdate=11 February 2013|newspaper=The Telegraph|date=6 April 2009|location=London|first=Tom|last=Cary}}</ref>
