*Empty MediaWiki Message*

--- a/Lewis_Hamilton.mw
+++ b/Lewis_Hamilton.mw
@@ -82,13 +82,12 @@ In february wyr Hamilton verbål anevallen en up andere wys misbruukt tydens de 
 Kört vöar den brasiliaansken Grand Prix van 2008 wyr ne websteade van den spaansken tak van advertentsybedryv TBWA uut New York enåmed "pinchalaruedadeHamilton" ("stekt Hamiltons banden lek") enöömd in de britske media. De websteade bevatteden ne eanimeerde avbeeldinge van Interlagos dat gebruukers de möägelikheyd gav üm spykers en stekkels up de båne too leggen wår de wågen van Hamilton oaverhen sol ryden. Under de duusende upmarkingen achterelåten sinds 2007 waren nen antal racistiske beledigingen. Synen rivål Fernando Alonso veroardeleden de racistiske supporters.
 
 ==== Et seisoon van 2009: Nen frustrerend jår ====
-[[Bestaand:Hamilton_2009_Malaysian_GP_1.jpg|rechts|duum|Hamilton driving for McLaren at the 2009 Malaysian Grand Prix]]
-Hamilton started the 2009 season-opening Australian Grand Prix from 18th place on the grid after the McLaren team incurred a penalty for changing his gearbox during qualifying.<ref>{{cite news|url=https://www.telegraph.co.uk/sport/motorsport/formulaone/5065001/Lewis-Hamilton-trailing-as-Jenson-Button-takes-pole-for-F1-Australian-Grand-Prix.html|title=Lewis Hamilton trailing as Jenson Button takes pole for F1 Australian Grand Prix|first=Tom|last=Cary|work=The Daily Telegraph|date=28 March 2009|accessdate=17 August 2010|location=London}}</ref> Hamilton benefited from a late crash between Red Bull's Sebastian Vettel and BMW Sauber's Robert Kubica to move into fourth place by the end of the race. He was then promoted to third after Jarno Trulli was penalised for overtaking him under safety-car conditions. During a post-race stewards' hearing, Hamilton and McLaren officials told stewards they had not purposely let Trulli pass, which was contradicted by the release of the McLaren race radio communication.<ref>
-{{cite web|url=http://makformula1.blogspot.com/2009/04/transcript-of-mclaren-radio.html|title=FORMULA 1: Transcript of McLaren radio transmission + AUDIO|publisher=makformula1.blogspot.com|accessdate=3 April 2009}}</ref> Hamilton was then disqualified from the race for providing "misleading evidence" during the stewards' hearing.<ref>{{cite news|last=Noble|first=Jonathan|url=http://www.autosport.com/news/report.php/id/74146|title=Hamilton disqualified from Australian GP|work=Autosport|date=2 April 2009|accessdate=2 April 2009}}</ref> He later privately apologised to FIA race director Charlie Whiting for having lied to the stewards.<ref>{{Cite news|url=http://www.autosport.com/news/report.php/id/74394|title=Hamilton apologised to FIA's Whiting|work=Autosport|date=10 April 2009|author1=Cooper, Adam|author2=Noble, Jonathan|accessdate=11 April 2009}}</ref> He went on to describe the incident as the hardest week of his life, and considered quitting Formula One.<ref>{{cite news|title=Lewis Hamilton considered quitting Formula One over 'lying' scandal|url=https://www.telegraph.co.uk/sport/motorsport/formulaone/lewishamilton/5110917/Lewis-Hamilton-considered-quitting-Formula-One-over-lying-scandal.html|accessdate=11 February 2013|newspaper=The Telegraph|date=6 April 2009|location=London|first=Tom|last=Cary}}</ref>
+[[Bestaand:Hamilton_2009_Malaysian_GP_1.jpg|rechts|duum|Hamilton rydend vöär McLaren up den maleysisken Grand Prix van 2009.]]
+Hamilton begön de opener van et seisoon van 2009, den australisken Grand Prix, vanav de 18de startplåtse nådat McLaren nen starv had ekregen vöär et verwisselen van synen versnellingsbak tydens de kwalifikatsy. Hamilton profitereden van nen låten botsing tüsken Sebastian Vettel van Ferrari en Robert Kubica van BMW Sauber wårdöär hy upskoov når de veerde plåtse an et ende van de race. Hy wyr vervölgens epromoveerd töt darden nådat Jarno Trulli was estravt vöär et inhålen van hem under ümstandigheden med nen safety car. Tydens nen gesprek med de jüry nå de race vertelleden Hamilton en officials van McLaren de jüry dat sy Trulli neet upsettelik hadden låten passeren, wat låter teagenesprökken wyr döär de bekenntemåkede raceradiokommunikatsy van McLaren. Hamilton wyr vervölgens ediskwalificeerd van de race vöär et gevven van "misleidend bewys" tydens et gesprek med de jüry. Hy hevt sich låter persoonlik veruntskuldigd by de racedirekteur van de FIA Charlie Whiting vöär et elogen hebben by de racejüry. Hy ging verder döär et incident too beskryven as den swårsten weak van syn leaven en oaverwoog de Formule Eyn too verlåten.
 
-Hamilton scored minor points at the Malaysian, Chinese and Bahrain Grands Prix. Hamilton's fortunes were reversed at the Hungaroring, the tenth round of the season where he won the race, 11.529 seconds clear of Räikkönen to take his 10th career win and the first for a KERS-equipped car.<ref>{{cite web|url=http://en.espnf1.com/f1/motorsport/story/5103.html|title=KERS, ex-F1 champs and South Korea|accessdate=27 August 2010|last=Lynch|first=Steven|date=15 December 2009|publisher=ESPN F1}}</ref> McLaren's return to form continued in Valencia, where Hamilton finished second.<ref>{{cite news|url=https://www.theguardian.com/sport/2009/aug/23/lewis-hamilton-robbed-grand-prix-victory-valencia-barrichello|title=Lewis Hamilton robbed of victory by pit-lane fiasco|accessdate=27 August 2010|last=Hamilton|first=Maurice|date=23 August 2009|work=The Guardian|location=London}}</ref> In Singapore Grand Prix, Hamilton took his second win of the season.<ref>{{cite news|url=http://news.bbc.co.uk/sport2/hi/motorsport/formula_one/8277277.stm|title=Boost for Button as Hamilton wins|date=27 September 2009|publisher=BBC Sport|accessdate=28 September 2009|first=Ollie|last=Williams}}</ref> He finished third at the Japanese and Brazilian Grands Prix. In the inaugural Abu Dhabi Grand Prix, Hamilton led the race, but retired on lap 20 due to a rear brake problem, his first technical-related retirement in Formula One.<ref>{{cite web|url=http://news.bbc.co.uk/sport2/hi/motorsport/formula_one/8336637.stm|title=Vettel wins as Hamilton drops out|date=1 November 2009|work=BBC Sport|accessdate=2 November 2009|archiveurl=https://web.archive.org/web/20091103055918/http://news.bbc.co.uk/sport2/hi/motorsport/formula_one/8336637.stm|archivedate=3 November 2009|deadurl=no}}</ref>
+Hamilton scoreden weinig pünten by de Groute Prys van Maleysie, China en Bahrein. Hamiltons geluk verbetereden up de Hungaroring, de tynde runde van et seisoon, wår hy de race wön, 11.529 sekunden vöär Räikkönen wårmed hy de tynde oaverwinning van syne karriere pakkeden en de eyrste med nen wågen med KERS. De terügkeer van McLaren in vörm ging wyder in Valencia, wår Hamilton tweyds endigeden. By den singaporeesken Grand Prix pakkeden Hamilton syne tweyde oaverwinning van et seisoon. He endigeden dardes by de japanske en brasiliaanske Groute Prys. In den eyrsten Grand Prix van Abu Dhabi ging Hamilton an de leiding in de race, mår trök sich terügge in runde 20 due vanweagen nen probleem med den achterrem, syne eyrste terügtrekking in de Formule Eyn vanweagen nen technisk probleem.
 
-==== 2010 season: Another title challenge ====
+==== Et seisoon van 2010: Ne nye titelpoging ====
 [[Bestaand:Lewis_Hamilton_2010_Malaysia_1st_Free_Practice.jpg|rechts|duum|Hamilton driving for McLaren at the 2010 Malaysian Grand Prix, where he finished in sixth position after starting 20th]]
 For the new season Hamilton would drive alongside Jenson Button, after Heikki Kovalainen moved to Lotus Racing.<ref>{{cite news|url=http://news.bbc.co.uk/sport1/hi/motorsport/formula_one/8411249.stm|title=Lotus F1 sign Jarno Trulli and Heikki Kovalainen|publisher=BBC Sport|accessdate=2 September 2010|date=14 December 2009}}</ref>
 
