/* Et seisoon van 2008: Jüngsten werldkampioon oit */

--- a/Lewis_Hamilton.mw
+++ b/Lewis_Hamilton.mw
@@ -68,7 +68,7 @@ De rivaliteyt tüsken Hamilton en teammåt Alonso leidden töt de spekulåtsy da
 ==== Et seisoon van 2008: Jüngsten werldkampioon oit ====
 Nen månd nå et vertrek van Alonso, wyr et bevestigd dat Heikki Kovalainen den tweyden wågen ryden sül vöär McLaren-Mercedes in 2008 nevven Hamilton, den nen ny vyfjårig konkrakt van meyrdere miljoonen punden teakenden üm töt et ende van et seisoon van 2012 by McLaren-Mercedes too blyven.
 [[Bestaand:Lewis_hamilton_-_2008_Melb_GP.jpg|links|duum|Hamilton wön de eyrste race van 2008 in Melbourne, Australie.]]
-Hamilton wön de eyrste race van et seisoon van 2008, den Grouten Prys van Australie, nådat hy up de eyrste positsy was begönnen. In Maleysie endigeden hy vyvdes nådat hy van de neagende plekke was estarted, wårby hy nen strav mos uutsitten vöär et hinderen van de kwalifikatsyrunde van Nick Heidfeld. Hy was terügge up et podium in Spanje döär dår dardes too endigen. Hamilton endigeden tweyds in Türkeye en wön den Grouten Prys van Monaco, wat hem an de leiding bracht van et werldkampioonskap. In Montreal botseden Hamilton tydens de race up de achterkante van Räikkönen, nådat hy neet had können seen dat den Fin mos wachten vöär et roden licht an et ende van de pitstråte terwyl et heylen veld vöärby kwam under begeleiding van nen safety car. Beyde wågen mosten upgeven en Hamilton kreg nen strav van 10 positsys vöär den start van de völgende race, den fransken Grand Prix. Undanks nen fout by de kwalifikatsy wårdöär hy as veerdes starteden, wön den britsken Grand Prix under möylike, natte umstandigheyden met ne prestatsy dee töt düsverre as eyne van de beste van syne karriere wördt esen. In de völgende race up Hockenheim wön Hamilton undanks nen taktisken blünder van de teamstrategy.
+Hamilton wön de eyrste race van et seisoon van 2008, den Grouten Prys van Australie, nådat hy up de eyrste positsy was begönnen. In Maleysie endigeden hy vyvdes nådat hy van de neagende plekke was estarted, wårby hy nen strav mos uutsitten vöär et hinderen van de kwalifikatsyrunde van Nick Heidfeld. Hy was terügge up et podium in Spanje döär dår dardes too endigen. Hamilton endigeden tweyds in Türkeye en wön den Grouten Prys van Monaco, wat hem an de leiding bracht van et werldkampioonskap. In Montreal botseden Hamilton tydens de race up de achterkante van Räikkönen, nådat hy neet had können seen dat den Fin mos wachten vöär et roden licht an et ende van de pitstråte terwyl et heylen veld vöärby kwam under begeleiding van nen safety car. Beyde wågen mosten upgeven en Hamilton kreg nen strav van 10 positsys vöär den start van de völgende race, den fransken Grand Prix. Undanks nen fout by de kwalifikatsy wårdöär hy as veerdes starteden, wön den britsken Grand Prix under möylike, natte ümstandigheyden met ne prestatsy dee töt düsverre as eyne van de beste van syne karriere wördt esen. In de völgende race up Hockenheim wön Hamilton undanks nen taktisken blünder van de teamstrategy.
 
 Hamilton wön den belgisken Grand Prix, mår låter wyr döär eoordeeld dat hy nen üneyrlik vöärdeyl had ehad döär nen versmalling in et parkours af too snyden üm nen botsing med Räikkönen too vöärkommen. McLaren sei dat öäre telemetry leet seen dat Hamilton achterblev üm Räikkönen vöärby too låten, mår Hamilton kreg nen tydsstrav van 25 sekunden, wat hem terügbracht når de darde plåtse en titelrivål Massa de oaverwinning gav. Hamiltons vöärsprong in et werldkampioonskap vöär koureurs wyr terügebracht töt twey pünten en nen beroop by et FIA World Motor Sport Council döär McLaren wyr avewesen.
 
