--- a/Deelstoaten_van_Duutslaand.mw
+++ b/Deelstoaten_van_Duutslaand.mw
@@ -6,7 +6,7 @@ De '''dealstoaten van Duutslaand''' ([[Duuts]]: ''Länder'' of ''Bundesländer''
 Al et groondgebeed van de Bondsrepebliek lig in ene van de deelstoaten. Met ''Bundesgebiet'' (''federoal gebeed'') wörd et hele Duutslaand bedoold. Der is gin deelstoatloos gebeed wat direkt deur de federoale oawerheaid bestuurd wörd (Aans as biejveurbeald in de [[Verienigde Staoten van Amerika|Vereanigde Stoaten]], met öare [[United States territories]], zo as een antal eileande). De greanzen van nen dealstoat könt alleannig met een [[plebiskiet]] anpast wördn. [[Noordrhain-Westfele|Noordrien-Westfalen]] hef de meeste inwonners, [[Breemn]] de meenste. Ok wat oppervlakte angeet is Bremen et kleainst en [[Beiern]] et grötst. A'w [[stadstoat|stadstoaten]] neet metrekkent, dan hef [[Saarlaand]] et meenste antal inwonners en oppervlakte.
 
 ==Naamen==
-[[Ofbeelding:Administrative Gliederung Deutschlands.svg|200px|thumb|right|Vertikalen bestuursstruktuur in Duutslaand: ''Bund'', ''Länder'' en ''Bundesländer''.]]
+[[Ofbeelding:Administrative divisions of Germany.svg|lang=de|200px|thumb|right|Vertikalen bestuursstruktuur in Duutslaand: ''Bund'', ''Länder'' en ''Bundesländer''.]]
 De Duutste Groondwette van [[1949]] neumt de dealstöate "''Land''" (mearvold: "''Länder''"). Vaker broekt ze n term "''Bundesland''", umdet ''Land'' ook veur nen nasjonalen stoat as [[Fraankriek]] of [[Polen]] kan wean. In Duutslaand zegt zee ok nich "''laandelik''" (''ländlich'') as et um de hele Boondsrepubliek geet, moar "''bundesweit''".
 
 De meeste dealstoaten neumt zichzölf ''Land'' (zo as ''das Land [[Sleeswiek-Holstain|Schleeswiek-Holsteen]]''). Beieren, [[Saksen (dailstoat)|Saksen]] en [[Turen]] broekt n term ''Freistaat'', een old woord veur 'republiek'. Et parlemeant van nen dealstoat het vake ''Landtag''. De dealstoatregearige het ''Landesregierung'' of (in Beieren en Saksen) ''Staatsregierung'' en zienen veurzitter ''Ministerpräsident''. De ministers hett ''Minister'' of ''Staatsminister''. vake zegt zee ''Landesminister'', ofhaanklik van de umstandigheden,  um et verskil met nen federalen minister an te gevven, um dus n ''Bundesinnenminister'' (federale minister van binnenlaandse zaken) van nen ''Landesinnenminister'' vort te könn zegn.
