--- a/Joekelille.mw
+++ b/Joekelille.mw
@@ -1,10 +1,10 @@
 [[Ofbeelding:Ukulele wall.jpg|thumb|right|Ne mure vol met Joekelilles]]
 
-Ne '''joekelille''' of '''oekelele''' (in aandere sproakn vake skreewn as ''ukelele'' of ''ukulele'') is n kleain snoarinstrumeant. t Wörd vake (onterecht) nen "mini[[gitaar]]" eneumd, umdet t doar wal völle op lik wat vörm angeet. In teegnstelling töt gitaarn hef ne joekelille mer 4 snoarn (nen gitaar hef dr ja 6).
+Ne '''joekelille''' of '''ukelele''' (in andere språken vake skreaven as ''ukelele'' of ''ukulele'') is een klein snaarinstrument. Et wördt vake (unterecht) nen "mini[[gitaar]]" enömed, üm dat et dår wat vorm angeyt wal vöäle up likt. In teagenstelling töt gitaren hevt ne ukelele mär veer snåren (nen gitaar hevt der ja sesse).
 
-De joekelille keump oet t 19e joarhoonderd oet [[Hawaii]]. t Was ne lokale anpassing van de oolde [[kavakinjo]] (''cavaquinho''), den't noar t eailaand wör invoord duur [[Portugal|Portugese]] immigraantn. In de joarn '20 van t 20ste joarhoonderd wör t instrumeant onmeundig geleefd in de [[Verenigde Stoaten|VSA]].
+De ukelele stammet uut et [[Hawaii]] van de [[19e eeuw|19de eywe]]. Et was ne lokale anpassing van de [[cavaquinho]], den as döär [[portugal|portugeyske]] immigranten når et eiland bracht wör. In de 1920er jåren van de [[20e eeuw|20ste eywe]] wör et instrument slim populäär in de [[Verenigde Stoaten|Vereanigde Ståten]] van Amerika.
 
-Joekelilles he'j in 4 moatn: [[sopraan]], konsert, [[tenoor]] en [[bariton]].
+Ukeleles heb y in 4 måten: [[sopraan]], concert, [[tenoor]] en [[bariton]].
 
 ==Stemming==
 Joekelilles zeent meestal estemd in ''GCEA'', woerbie't, den ''C'' de bas-snoare is, en den ''G'' nen oktaaf verheugd is. Dit neumt ze ook wal C-stemming. Ne aandere stemming den't ook wal vake vuurkeump is ''BDF#A'' (D-stemming). Duurdet de snoarn al in n goodkleenkend akkoord estemd stoat, is t instrumeant rellatief makkelik te bespöln.
