--- a/Färöer.mw
+++ b/Färöer.mw
@@ -4,15 +4,15 @@
 | wapen = Coat of arms of the Faroe Islands.svg
 | lokasie = LocationFaroeIslands.png
 | breedtegroad=61/55//N | lengtegroad=6/50//W | region=FO
-| talen = [[Faeröers]], [[Deens]]
+| talen = [[färöösk]], [[Deens|däänsk]]
 | heufstad = [[Tórshavn]]
 | religie = [[protestantisme]]
-| regeringsvorm = zelfbestuur
+| regeringsvorm = selvbestüür
 | km2 = 1399
 | pctwaoter = 0,5
 | inwoeners = 48.354
 | dichtheid = 34,6
-| munteenheid = [[Faeröerse krone]]
+| munteenheid = [[färööske kroune]]
 | valutacode = FOK
 | tiedzone = +0
 | volkslied = [[Tú alfagra land mítt]]
@@ -21,37 +21,37 @@
 | laandcode = FO
 | til = 298
 }}
-De '''Faeröer''' ([[Faeröers]]: ''Føroyar'' {{IPA|[ˈfœɹjaɹ]}}; [[Deens]]: ''Færøerne'' {{IPA|[ˈfæɐ̯øːˀɐnə]}})) bin n [[West-Europa|West-Europese]] eilaandengroep, elegen in t midden van de dreehoek [[Schotlaand]]-[[Noorwegen]]-[[Ieslaand]] en beheurt toe an t koninkriek [[Denmaark|Denemarken]]. De naam Faeröer betekent 'schapeneilaanden' (''øer'' is Deens veur 'eilaanden', dus de naam ''Faeröer-eilaanden'' is feitelik n [[pleonasme]]). Der woenen zwat 45.000 luui, hiervan woent n groot deel in de [[heufdstad|heufstad]] [[Tórshavn]]. De plaotselike [[Noord-Germaans]]e dialekten, verwant an t[[Ieslaands]], vormen n amparte taal, estandardiseerd in t [[Faeröers]].
+De '''Färöer''' of '''Färougen''' ([[färöösk]]: ''Føroyar'' {{IPA|[ˈfœɹjaɹ]}}; [[Deens|däänsk]]: ''Færøerne'' {{IPA|[ˈfæɐ̯øːˀɐnə]}})) is een [[West-Europa|westeuropääske]] eilandengrup. Et ligt in et midden van de dreehook [[Schotlaand|Skotland]]-[[Noorwegen|Noorweagen]]-[[Ieslaand|Ysland]] en behöyrt tot et koaningryk [[Denmaark|Dänemark]]. De name Färöer beteykent 'skåpeneilanden' (''øer'' of ''oyar'' is respektivelik däänsk en färöösk vöär 'eilanden', de name ''Färöer-eilanden'' is düs feitelik een [[pleonasme]]). Der woanen sowat 45.000 lüde, hyrvan woant een grout deyl in de [[heufdstad|höyvdstad]] [[Thorshoaven|Torshaven]] (''Tórshavn''). De plaatselike [[Noord-Germaanse taelen|noordgermaanske]] dialekten, verwand an et [[Ieslaands|yslandsk]], formen een amparte taal, estandardiseerd in et [[färöösk]].
 
-== Geschiedenisse ==
-De Faeröer bin veurnamelik bevolkt vanuut [[Noorwegen]], vanaof de [[9e eeuw]] nao [[Christus]]. In de [[11e eeuw]] kwammen de eilaanden onder t gezag van de Noorse koning. To Noorwegen zelf n gebiedsdeel van [[Denemarken]] wördden, kwammen de Faeröer oek onder de Deense krone. Oek to Noorwegen [[Zweeds]] en laoter zelfstaandig wördden, bleven de Faeröer Deens. In [[1948]] kregen ze veregaond zelfbestuur. De Faeröer heuren niet bie de [[Europese Unie]].
+== Geskydenisse ==
+De Färöer is vöärnamelik bevolked vanuut [[Noorwegen|Noorweagen]], vanof de [[9e eeuw|9. eyw]] nå [[Christus]]. In de [[11e eeuw|11. eyw]] kwammen de eilanden under et gesag van de noorske koaning. To Noorweagen selv een gebeedsdeyl van [[Denmaark|Dänemark]] wördden, kwammen de Färöer ouk under de däänske kroune. Ouk to Noorweagen [[Sveeds|sweedsk]] en later selvstandig wördden, bleaven de Färöer däänsk. In [[1948]] kreagen se vearegånd selvbestüür. De Färöer höyen neet by de [[Europese Unie|Europääske Uny]].
 
-Op partie zeekaorten uut de [[16e eeuw|16e]] en [[17e eeuw]] is in t zujen van Ieslaand n groot eilaand te zien dat ''Frisland'' eneumd wördden. Der wörden vanuut egaon dat daormee de Faeröer bedoeld wördden.
+Up party seykaarten uut de [[16e eeuw|16.]] en [[17e eeuw|17. eyw]] is in et süden van Ysland een grout eiland te seen dat ''Frisland'' enöömd wördden. Der wördt van uutegaon dat dårmead de Färöer bedoold wördden.
 
-== Onaofhankelikheid ==
-De opbrengst van [[olie]] veur de kust wördden veur n groot deel overeheveld naor Denemarken. De plaotselike bevolking ziet dus minnig van der eigen riekdommen. Dit post-koloniale beleid van Denemarken hef de wens onder de eilaandbewoeners um volledig onaofhankelik te wörden veerder vergroot. Denemarken hef t tot noen toe eweigerd.  
+== Unofhankelikheid ==
+De upbrengst van [[olie|oly]] vöär de küst van de Färöer wördden vöär een grout deyl ovaereheaveld når Dänemark. De plaatselike bevolking seet düs minnig van der eigen rykdommen. Dit postkoloniale beleid van Dänemarken hevt de wensk under de eilandbewoaners üm vulleadig unofhankelik te wörden vearder vergrouted. Dänemark hevt et tot nun to eweigerd.  
 
-== Geografie ==
-=== Kerngegevens ===
-* kustliende: 1117 km
-* hoogste punt: [[Slættaratindur]] op [[Oosteroog]], 882 m.
+== Geografy ==
+=== Kerngegeavens ===
+* kustlynde: 1117 km
+* hougste punt: [[Slættaratindur]] up [[Ousteroug]], 882 m.
 
-=== De eilaanden ===
-De zeuventien bewoende eilaanden van de Faeröer bin:
+=== De eilanden ===
+De söäventyn bewoande eilanden van de Färöer binnen:
 
-[[Streumoog]] (''Streymoy'') – [[Oosteroog]] (''Eysturoy'') – [[Vágar]] – [[Mykines]] – [[Zujeroog]] (''Suðuroy'') – [[Stóra Dímun]] – [[Skuoog]] (''Skúvoy'') – [[Zaandoog]] (''Sandoy'') – [[Hestur]] – [[Koltur]] – [[Nolsoog]] (''Nólsoy'') – [[Bordoog]] (''Borðoy'') – [[Keerlsoog]] (''Kalsoy'') – [[Kunoog]] (''Kunoy'') – [[Wiedoog]] (''Viðoy'') – [[Zwienoog]] (''Svínoy'') – [[Voegeloog]] (''Fugloy''). 
+[[Ströymoug]] (''Streymoy'') – [[Ousteroug]] (''Eysturoy'') – [[Vágar]] – [[Mykines]] – [[Süderoug]] (''Suðuroy'') – [[Stóra Dímun]] – [[Skuaroug]] (''Skúvoy'') – [[Sandoug]] (''Sandoy'') – [[Hestur]] – [[Koltur]] – [[Nolsoug]] (''Nólsoy'') – [[Bordoug]] (''Borðoy'') – [[Kearlsoug]] (''Kalsoy'') – [[Künoug]] (''Kunoy'') – [[Wydoug]] (''Viðoy'') – [[Swynoug]] (''Svínoy'') – [[Voageloug]] (''Fugloy''). 
 
-t Achttiende, onbewoende eilaand is [[Lítla Dímun]].
+Et achttynde, unbewoande eiland is [[Lítla Dímun]].
 
-== Uutgaonde verwiezingen ==
-{{commonscat|Faroe Islands|Faeröer}}
-* [http://www.visitfaroeislands.com/ Offisiële toeristenwebstee]
-* [http://www.faroeislands.com/ Webstee over de Faeröer veur toeristen]
-* [http://www.flickr.com/photos/14716771@N05/sets/72157602838195716/ Flick-foto's van de Faeröer]
+== Uutgånde verwysingen ==
+{{commonscat|Faroe Islands|Färöer}}
+* [http://www.visitfaroeislands.com/ Officiele websteade vöär turisten]
+* [http://www.faroeislands.com/ Websteade oaver de Färöer vöär turisten]
+* [http://www.flickr.com/photos/14716771@N05/sets/72157602838195716/ Flick-fotos van de Färöer]
 
-== Kaorte ==
-[[Bestaand:Faroes030417-nasa(2).jpg|thumb|left|Satellietfoto]]
-[[Bestaand:Torshavn vuurtoren.jpg|thumb|Tórshavn]]
+== Kaarte ==
+[[Bestaand:Faroes030417-nasa(2).jpg|thumb|left|Satellytfoto]]
+[[Bestaand:Torshavn vuurtoren.jpg|thumb|Torshaven]]
 
 {{Dialekt|wvel|Nunspeet|Algemene Nedersaksiese Schriefwieze}}
 
