--- a/Blokgooien.mw
+++ b/Blokgooien.mw
@@ -58,7 +58,7 @@ Alle 'dooien' mochten bij een nei spellegie eerst. Wel er het eerst aofgooid was
 
 De inleg (2-eurocentmuntjes) per man wor van teveuren daon op een (picknick) taofel. Op het blok liggen 12 plastic fiches an eein kaant wit, en aanerkaant rood. Vallen de fiches rood omhoog, dan worden die in een plastic beker daon (an een boom). De witten gaon weer op het blok. De rest van de regels bint geliek as hierboven.
 
-'''''Dit stuk was schreven in 't Noord- (en 'n beetie) Zuid-Drèents wa'k altied zo metkregen heb.'''''
+'''''Dit stuk was schreven in 't Noord- (en 'n beetie) Zuud-Dreins wa'k aaid zo metkregen heb.'''''
 
 == Oetgaonde verwiezingen / bronnen ==
 *[http://blokgooien.blogspot.nl De webstee van het Roner blokgooien]
