*Empty MediaWiki Message*

--- a/Joekelille.mw
+++ b/Joekelille.mw
@@ -1,28 +1,30 @@
 [[Ofbeelding:Ukulele wall.jpg|thumb|right|Ne mure vol met Joekelilles]]
 
-Ne '''joekelille''' of '''ukelele''' (in andere språken vake skreaven as ''ukelele'' of ''ukulele'') is een klein snaarinstrument. Et wördt vake (unterecht) nen "mini[[gitaar]]" enömed, üm dat et dår wat vorm angeyt wal vöäle up likt. In teagenstelling töt gitaren hevt ne ukelele mär veer snåren (nen gitaar hevt der ja sesse).
+Ne '''joekelille''' of '''ukelele''' (in andere språken vake skreaven as ''ukelele'' of ''ukulele'') is een klein snaarinstrument. Et wördt vake (unterecht) nen "mini[[gitaar]]" enömed, üm dat et dår wat vorm angeyt wal vöäle up likt. In teagenstelling töt gitaren hevt ne ukelele mär veer snåren (nen gitaar hevt der ja sesse). De ukelele kenmarket sik döär een sacht, leevlik geluud.
 
 De ukelele stammet uut et [[Hawaii]] van de [[19e eeuw|19de eywe]]. Et was ne lokale anpassing van de [[cavaquinho]], den as döär [[portugal|portugeyske]] immigranten når et eiland bracht wör. In de 1920er jåren van de [[20e eeuw|20ste eywe]] wör et instrument slim populäär in de [[Verenigde Stoaten|Vereanigde Ståten]] van Amerika.
 
 Ukeleles heb y in 4 måten: [[sopraan]], concert, [[tenoor]] en [[bariton]].
 
 ==Stemming==
-Joekelilles zeent meestal estemd in ''GCEA'', woerbie't, den ''C'' de bas-snoare is, en den ''G'' nen oktaaf verheugd is. Dit neumt ze ook wal C-stemming. Ne aandere stemming den't ook wal vake vuurkeump is ''BDF#A'' (D-stemming). Duurdet de snoarn al in n goodkleenkend akkoord estemd stoat, is t instrumeant rellatief makkelik te bespöln.
+Ukeleles sint meysttyds estemmed in '' GCEA'. Dårby is de C de bassnåre en de G is nen oktaaf höyger. Dit wörd C-stemming enömed. Ne andere populaere stemming is ''BDF#A'' (D-stemming). Döärdat de snåren hyr al in een good-klinkend akkoord estemmed ståt, is disse stemming dübbel so makkelik üm te bespöllen.
 
-==Joekelilles in [[Nedersaksië]]==
-In t [[Neersassies]]e gebeed zeent joekelilles nooit echt serieus duur edrungn. Net as in de rest van (Noord) [[Europa (continent)|Europa]] wörd t deenk meestal nit vuur vol an ezeen. n Bekeandsten Neersassiesen artiest den't wat met ne joekelikke dut is [[Daniël Lohues]], den't dr regelmoatig ene in zinne nommers gebrok. Nen meender bekeandn was [[Harm oet Riessen]], den't dr n heel versken an wiedn.
+==Ukeleles in de [[Saksenmarken]]==
+In et [[Nedersaksisch|Neadersassiske]] gebeed sint ukeleles nooit heyl seriöös döär edrüngen. Net as in de rest van (Noord) [[Europa (continent)|Europa]] wördt et instrument meysttyds nit vöär vul an eseen. Den bekendsten neadersassisken artist den as mangs wat med ne ukelele düt is [[Daniël Lohues]]. Yts minder bekend was [[Harm oet Riessen]], den as der een heyl värsken an wydden.
 
-In [[Platduuts]]laand is t vuural [[Ina Müller]] den't bekeand is van nen vuurstelling saamn met [[Edda Schnittgard]] woerin't ze twee joekelilles gebroekt.
+In Noord-Düütskland is vöäral [[Ina Müller]] bekend van ne vöärstelling samen med [[Edda Schnittgard]], wårin as se ukeleles bespöllet.
 
-==Bekeande spöllers==
-n Bekeandsten joekelillespöller was [[Israel Kamakawiwo'ole]] oet [[Hawaii]]. Den har wearldwied nen groten hit met t nommer ''Somewhere over the Rainbow/What a Wonderful World''. In [[Neerlaand]] spölt [[kabaretjeare]] [[Brigitte Kaandorp]] in öare vuurstellings nog wal vake op ne joekelille. Ene den't aal mear bekeandheaid krig um zin ongekeande joekelilleverskes is [[Jake Shimabukuro]].
+==Bekende spöllers==
+Den ukelelespöller den as et instrument wearldwyde bekendheid verskaffeden was [[Israel Kamakawiwo'ole]] uut [[Hawaii]]. Syne versy van ''Somewhere over the Rainbow/What a Wonderful World'' wör nen wearldwyden hit. In de dartiger jåren van de [[20e eeuw|20e eywe]] sorgeden den [[Groot-Brittanje|britsken]] [[George Formby]] vöär ne ukelele-gekte in Groot-Brittanie. In Neaderland düt [[cabaret|kabarettiste]] [[Brigitte Kaandorp]] reygelmåtig up ne ukelele in öäre vöärstellingen. 
 
-In 2010 har de [[Verienigde Staoten van Amerika|Amerikaanse]] band [[Train (band)|Train]] nen redeliken wearldhit met t nommer "Hey Soul Sister". Hierin neamp de joekelille nen belangrieken plek in.
 
-In 2011 köm [[Eddie Vedder]], n zänger van n bekeandn [[Verenigde Stoaten|Amerikaans]]en band [[Pearl Jam]] met t solo-album ''Ukulele Songs'', met doarop 16 nommers woerin't he zikzelf met eankelt ne joekelille begeleaidn dut.
+In [[2010]] had den [[Verienigde Staoten van Amerika|amerikaansken]] band [[Train (band)|Train]] nen wearldhit med öär nummer "Hey Soul Sister". Hyrin nemt de ukele ne vöärname steade in. In [[2011]] köäm [[Eddie Vedder]], 'n sanger van den band [[Pearl Jam]], med een solo-album ''Ukelele Songs'', med dårup 16 originäle nummers med enkel ne ukelele as begeleiding.
 
-==Oetgoande koppeling==
-*[http://www.get-tuned.com/ukulele_tuning_methods.php Webstea oawer de joekelille, met stemhulpe]
+Up [[YouTube]] is den amerikaan [[Jake Shimabukuro]] bekend üm syne behearsing van et instrument.
+
+
+==Uutgånde koppeling==
+*[http://www.get-tuned.com/ukulele_tuning_methods.php Websteyde oaver ukeleles, med stemhülpe]
 
 {{Commonscat|Ukulele}}
 
