--- a/Juul.mw
+++ b/Juul.mw
@@ -11,7 +11,7 @@ Geeneyne weat precys wår as et syn eyrste förm had, mar wårskynlik geyt et al
 
 ==Uutvoring==
 ===Kenmarken===
-As y et de oldgermanist [[Jan de Vries]] vrågent, bint de belangrykste kenmarken van et juulfeest et volgende:
+As y et de oldgermanist [[Jan de Vries]] vrågend, bint de belangrykste kenmarken van et juulfeest et volgende:
 * de tyd van twaalv nachten is een oavergangstyd;
 * in disse tyd kummet de oaverleaden vöärolders wearümme (wilde jacht), en dårmed bint kultusfeesten en jungensbunden an verbünden;
 * et uutmaken van et olde vüür en et ansteaken van et nye vüür;
