--- a/Juul.mw
+++ b/Juul.mw
@@ -18,7 +18,7 @@ As y et de oldgermanist [[Jan de Vries]] vrågend, bint de belangrykste kenmarke
 * inwydingsfeesten;
 * gevechte tüsken twey gruppen (summer en winter);
 * vrypartyen
-* sociale reagels bint tydelik of eskafd.
+* sociale reagels bint tydelik of eskavd.
 
 ==Algemeyn==
 Elk jår up [[old en ny]] gåt lüde in Europa kabaal maken med vüürwark en karbit sketen. Vüürwark müt mooi weasen en karbit müt hard knappen. Et karbit sketen is een oustneaderlandsk gebruuk, wat ouk in wat deylen in Düütskland geböärt. [[Mirreweenterhoorn|Midwinterhoornblåsen]] wördt üm desülvde readen (van vroager uut) ouk edåne. Want al disse förmen hebbet in disse tyd et dool ümme et kwåd vord te jagen en de sünne wearümme te ropen. Lös dårvan had de midwinterhoorn ouk deenst as berichten oaver verre te doon.
