*Empty MediaWiki Message*

--- a/Imbolc.mw
+++ b/Imbolc.mw
@@ -1,4 +1,4 @@
-'''Imbolc''' is eyne van de veer belangryke feesten dee as de kelten vyreden. Et wörd eholden up 31 februari. Ouk in Skandinavie doot se feesten rund disse tyd hebben. Et is een feest med allerlei gebruken ümme de vrüchterbaarheid wat wearümme kümt; blyde weasen dat de köyldte van et winter vord geyt en de sünne wear langer skynen düt. Dårümme neamet sy ouk disse dåtum, want et kümt nu precys in et midden van de wintersünnewende en de [[lentepünte]].
+'''Imbolc''' is eyne van de veer belangryke feesten dee as de kelten vyreden. Et wörd eholden up 31 februari. Ouk in Skandinavie doot se feesten rund disse tyd hebben. Et is een feest med allerlei gebruken ümme de vrüchterbaarheid wat wearümme kümt; blyde weasen dat de köyldte van et winter vord geyt en de sünne wear langer skynen düt. Dårümme neamet sy ouk disse dåtum, want et kümt nu precys in et midden van de [[winter|wintersünnewende]] en de [[lente|lentepünte]].
 
 Dissen feest is an de godinne (en later de heilige) [[Brigrid]] ewyded. 
 
