--- a/Imbolc.mw
+++ b/Imbolc.mw
@@ -1,6 +1,7 @@
-'''Imbolc''' is eyne van de veer belangryke feesten dee as de kelten vyreden. Et wörd eholden up 31 februari. Ouk in Skandinavie doot se feesten rund disse tyd hebben. Et is een feest med allerlei gebruken ümme de vrüchterbaarheid wat wearümme kümt; blyde weasen dat de köyldte van et winter vord geyt en de sünne wear langer skynen düt. Dårümme neamet sy ouk disse dåtum, want et kümt nu precys in et midden van de [[winter|wintersünnewende]] en de [[lente|lentepünte]].
+'''Imbolc''' is eyne van de veer belangryke feesten dee as de kelten vyreden. Et wörd eholden up 31 februari. Ouk in Skandinavie doot se feesten rund disse tyd hebben. Et is een feest med allerhande gebruken ümme de vrüchterbaarheid wat wearümme kümt; blyde weasen dat de köyldte van et winter vord geyt en de sünne wear langer skynen düt. Dårümme neamet sy ouk disse dåtum, want et kümt nu precys in et midden van de [[winter|wintersünnewende]] en de [[lente|lentepünte]].
 
 Dissen feest is an de godinne (en later de heilige) [[Brigrid]] ewyded. 
 
 De name Imbolc kümt van et Yrske ''i molg'', wat ''in den buuk'' beteakend. Ofwal, de ooier dee as drachtig bint. De lente wörd ouk so edüüd in et keltisk. Een andere naamsverklåring is dat et kümt van et old-engelsk Oimelc ("ooimelk"). Mar dat is wat minder gelöyvweardig.
+
 {{Dialekt|sdz}}
